# dstools_dtdy

./: README.md  pyproject.toml  setup.cfg  setup.py
benchmark/: benchmark.py
src/dstools_dtdy/: __init__.py  adaptive_elasticnet.py  aenet.py  linear_model.py  linear_model_cython.pyx  qr.c  qr_ols.py  qr_wrapper.py  ridge_regression.py
tests/: test_all.py  test_hw2.py  test_mylm.py  test_qr.py
