[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dstools_dtdy"
version = "0.0.1"
authors = [
  { name="Dylan Day"},
]
description = "A small package for fitting a linear model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dd080604/dstools_dtdy"
